tests/reject/chan_reassign.ty
# a task/channel variable cannot be reassigned (orphans the task/queue). Both reject.
fn main():
    ch := channel(int, 2)
    ch = channel(int, 2)
    print("x")
